Updated button shapes to fix spacing

--- a/CSS_Files/ResourcePageCSS.css
+++ b/CSS_Files/ResourcePageCSS.css
@@ -93,7 +93,7 @@ csc for drop down boxes
     padding: 10px;
     height: 50px;
     text-align: center;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     background: #eeeded;
 }
 
